推送-更新Leetcode笔记

--- a/Leetcode/hot100零散收录/不定滑动窗口/10.12长度最小的子数组.md
+++ b/Leetcode/hot100零散收录/不定滑动窗口/10.12长度最小的子数组.md
@@ -5,13 +5,15 @@
 ```cpp
     while (right<len)
     {
-        //现在用nums[right]来更新数组
-        while (条件判断) // 需要维护整个窗口
+        //1.进入窗口现在用nums[right]来更新数组
+        while (条件判断) // 2.维护窗口需要维护整个窗口
         {
+            //3.也有可能在这里更新答案的xd
             //用nums[left]来更新var
             //窗口缩小，即left指针右移
         }
-        right++;
+
+        right++;//3.更新答案和必不可少的right++
     }
 ```
 其实这个模板不一定正确 但是一定有两个while循环就是了 而且最后一定要无条件更新right 
