--- a/杂记/6.5C++杂记.md
+++ b/杂记/6.5C++杂记.md
@@ -1,14 +1,25 @@
 # Google风格C++规范
 https://zh-google-styleguide.readthedocs.io/en/latest/google-cpp-styleguide/contents.html
 ```cpp
-/*通用的变量名字命名，不要太多缩写，小写加下划线*/
+/*通用的变量名字命名，不要太多缩写，小写加下划线 这个叫蛇形命名法*/
 int price_count_reader;    // 无缩写
 int num_errors;            // "num" 是一个常见的写法
 int num_dns_connections;   // 人人都知道 "DNS" 是什么
-/*对于类和函数的命名采用驼峰命名法*/
+/*对于类和函数的命名采用大写驼峰命名法*/
 AddTableEntry()
 DeleteUrl()
 OpenFileOrDie()
+
+// 谷歌风格指南推荐
+class MyClass {                    // 帕斯卡 - 类名
+public:
+    void MyMemberFunction();       // 帕斯卡 - 成员函数
+    int my_member_variable;        // 蛇形 - 成员变量
+};
+
+void StandaloneFunction();         // 帕斯卡 - 独立函数
+int global_variable;               // 蛇形 - 全局变量
+
 ```
 ## c++ 智能指针和原始指针的写法区别
 ```cpp
